--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -11,33 +11,35 @@
         </div>
         <div class="recipe-container">
             <div class="row filter-btn-row">
-                <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', limit = 3, offset = 0) }}">View 3 Recipes</a>
-                <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', limit = 6, offset = 0) }}">View 6 Recipes</a>
-                <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', limit = 9, offset = 0) }}">View 9 Recipes</a>
-                <p class="filter-display">
-                    Current filter - 
-                    {% if filter_value == "1" %}
-                    All
-                    {% else %}
-                    {{ filter_value }}
-                    {% endif %}
-                </p> 
-                <div class="dropdown-box filter-box">
-                    <button class="dropbtn">Filter 
-                      <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-options">
-                        <a href="{{ url_for('recipes', offset = 0, filter_field = "_id", filter_value = 1 ) }}">All</a> {% for cusine in cusines %}
-                        <a href="{{ url_for('recipes', offset = 0, filter_field = "cusine", filter_value = cusine ) }}">{{ cusine }}</a> {% endfor %}
+                <div class="container">
+                    <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', limit = 3, offset = 0) }}">View 3 Recipes</a>
+                    <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', limit = 6, offset = 0) }}">View 6 Recipes</a>
+                    <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', limit = 9, offset = 0) }}">View 9 Recipes</a>
+                    <p class="filter-display">
+                        Current filter - 
+                        {% if filter_value == "1" %}
+                        All
+                        {% else %}
+                        {{ filter_value }}
+                        {% endif %}
+                    </p> 
+                    <div class="dropdown-box filter-box">
+                        <button class="dropbtn">Filter 
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-options">
+                            <a href="{{ url_for('recipes', offset = 0, filter_field = "_id", filter_value = 1 ) }}">All</a> {% for cusine in cusines %}
+                            <a href="{{ url_for('recipes', offset = 0, filter_field = "cusine", filter_value = cusine ) }}">{{ cusine }}</a> {% endfor %}
+                        </div>
                     </div>
-                </div>
-                <div class="dropdown-box sort-box">
-                    <button class="dropbtn">Sort
-                      <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-options">
-                        <a href="{{ url_for('recipes', offset = 0, sort_param = "_id" ) }}">Latest</a> 
-                        <a href="{{ url_for('recipes', offset = 0, sort_param = "recipe_name" ) }}">Recipe Name</a>
+                    <div class="dropdown-box sort-box">
+                        <button class="dropbtn">Sort
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-options">
+                            <a href="{{ url_for('recipes', offset = 0, sort_param = "_id" ) }}">Latest</a> 
+                            <a href="{{ url_for('recipes', offset = 0, sort_param = "recipe_name" ) }}">Recipe Name</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -46,45 +48,48 @@
                 <p class="center-text">I'm sorry but there doesn't appear to be any {{ filter_value }} recipes at the moment.  Please try another category!</p> 
             </div>
             {% endif %}
-            {% for recipe in recipes_list %}
-            <div class="recipe">
-                {% if recipe.author == user_id %}
-                <div class="row delete-recipe-row hide-me hidden-div">
-                    <div class="inner-delete-recipe-row">
-                        <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST">
-                            <p class="delete-confirmation-message uppercase center-text">Are you sure you wish to delete this recipe?!</p>
-                            <div class="row">
-                                <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm</button>
-                                <div class="cancel-delete-recipe-btn div-btn center-text center-div">Cancel</div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                {% endif %}
-                <a href="{{ url_for('view_recipe', username=username, recipe_id=recipe._id) }}">
-                <span class="recipe-row-top container">
-                    {% if recipe.recipe_image_url %}
-                    <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
-                    {% else %}
-                    <img class="recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
-                    {% endif %}
-                    <span class="recipe-info-container">
-                        <p class="recipe-list-item recipe-name">{{ recipe.recipe_name.title() }}</p>
-                        <p class="recipe-list-item">Not yet rated</p>
+            <div class="center-recipes">
+                {% for recipe in recipes_list %}
+                <div class="recipe">
+                    <a href="{{ url_for('view_recipe', username=username, recipe_id=recipe._id) }}">
+                    <span class="recipe-row-top container">
+                        {% if recipe.recipe_image_url %}
+                        <img class="recipe-img" src="{{ recipe.recipe_image_url }}"></img>
+                        {% else %}
+                        <img class="recipe-img" src="{{ url_for('static', filename='images/food-default.jpg') }}"></img>
+                        {% endif %}
+                        <span class="recipe-info-container">
+                            <p class="recipe-list-item recipe-name">{{ recipe.recipe_name.title() }}</p>
+                            <p class="recipe-list-item">Not yet rated</p>
+                        </span>
                     </span>
-                </span>
-            </a> {% if recipe.author == user_id %}
-                <div class="recipe-row-bottom">
-                    <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
-                    <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
-                    <button class="center-text">Edit</button>
-                </a>
+                    </a>
+                    {% if recipe.author == user_id %}
+                    <div class="recipe-row-bottom">
+                        <button class="delete-recipe-btn" id="{{ recipe.author }}">Delete</button>
+                        <a class="edit-recipe-btn" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
+                            <button class="center-text">Edit</button>
+                        </a>
+                    </div>
+                    {% else %}
+                    <div class="recipe-row-bottom"></div>
+                    {% endif %}
+                    {% if recipe.author == user_id %}
+                    <div class="row delete-recipe-row hide-me hidden-div">
+                        <div class="inner-delete-recipe-row">
+                            <form action="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" method="POST">
+                                <p class="delete-confirmation-message uppercase center-text">Are you sure you wish to delete this recipe?!</p>
+                                <div class="row">
+                                    <button class="confirm-delete-recipe-btn div-btn center-text center-div">Confirm</button>
+                                    <div class="cancel-delete-recipe-btn div-btn center-text center-div">Cancel</div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    {% endif %}
                 </div>
-                {% else %}
-                <div class="recipe-row-bottom"></div>
-                {% endif %}
-            </div>
-            {% endfor %}
+                {% endfor %}
+            </div> 
             <div class="row filter-btn-row">
                 <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', offset = offset - limit) }}">Prev</a>
                 <a class="next-recipes-btn div-btn" href="{{ url_for('recipes', offset = offset + limit) }}">Next</a>
