--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -49,7 +49,8 @@ a:after,
 .ingredients-container:after,
 .profile-section:after,
 .recipe-existing-instructions:after,
-.recipe-existing-ingredients:after{
+.recipe-existing-ingredients:after,
+.center-recipes:after{
     clear: both;
     content: "";
     display: block;
@@ -65,6 +66,10 @@ p {
     letter-spacing: 2px;
     font-size: 14px;
     line-height: 20px;
+    
+    @include large-tablet {
+        font-size: 12px;
+    }
 }
 
 a,
@@ -128,7 +133,8 @@ a:visited {
     }
     
     @include large-tablet {
-        font-size: 26px;    
+        font-size: 26px;
+        padding: 0 10px;
     }
 }
 
@@ -161,8 +167,20 @@ ul {
     width: 100%;
     height: 112vh;
     position: fixed;
-    top: -100px;
+    top: -174px;
     z-index: -1;
+    min-height: 700px;
+    
+    @include laptop {
+        height: 98vh;
+        top: -27px;
+    }
+    
+    @include large-tablet {
+        height: 62vh;
+        top: -78px;
+        min-height: 550px;
+    }
 }
 
 .full-width-div {
@@ -180,6 +198,10 @@ ul {
 .header-container {
     height: 400px;
     @extend %centralise-inner-container;
+    
+    @include large-tablet {
+        height: 360px;
+    }
 }
 
 .img-container {
